<resources>
    <string name="app_name">EquipotentialX</string>
    <string name="curvas_equipotenciales">Curvas Equipotenciales</string>
    <string name="carga1">Carga N°1</string>
    <string name="carga2">Carga N°2</string>
    <string name="carga_electrica">Carga Electrica</string>
    <string name="posicion_en_el_eje_x">Posicion en el Eje X</string>
    <string name="mc">mC</string>
    <string name="experimentar">Experimentar</string>
    <string name="concepto1">Una curva o superficie equipotencial es el lugar geométrico de los medios de igual potencial, donde se cumple que el potencial eléctrico generado por alguna distribución de volumen o volumen preciso es constante.</string>
    <string name="concepto2"> la superficie equipotencial que pasa por cualquier medio es perpendicular a la guía del campo eléctrico E</string>
    <string name="formula">V = K * Q/r</string>
    <string name="calcular_resultados">Calcular Resultados</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="version_app">EquipotentialX 1.1.0</string>
    <string name="campo_electrico">Campo Electrico</string>
    <string name="realidad_aumentada">Realidad Aumentada</string>
    <string name="superficies_equipotenciales_en_ar">Superficies Equipotenciales en AR</string>
</resources>